--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^2.3.2
   get: ^4.6.6
   path_provider: ^2.1.3
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
